# exo-sgemm

./: CMakeLists.txt  CMakePresets.json  LICENSE  README.md  requirements.txt  vcpkg.json
src/: CMakeLists.txt  sgemm.py
test/: CMakeLists.txt  benchmark.cpp  correctness.cpp
